2018-10-23 Rob Lauer <rlauer6@comcast.net>
	* bedrock-build: bump

	[validate id]:
	* src/main/perl/lib/BLM/IndexedTableHandler.pm.in

	[LOG_REDIRECT_STDERR_OFF]:
	* src/main/perl/lib/Bedrock/Log.pm.in: LOG_REDIRECT_STDERR_OFF

	[%PHONE uninitialized value]:
	* src/main/perl/lib/Bedrock/Model/Field.pm.in
	(%PHONE): check for existence of key to avoid warning

	[code formatting]:
	* src/main/perl/lib/BLM/Startup/SessionManager.pm.in
	- pod
	- remove log messages
	* src/main/perl/lib/Bedrock/Context.pm.in: typo in comment
	* src/main/perl/lib/Bedrock/Text/TagX/Log.pm.in: code formatting
	* src/main/perl/lib/Bedrock/Text/TagX/Output.pm.in: code formatting

2018-04-25 Rob Lauer <rlauer6@comcast.net>
	* src/main/perl/lib/BLM/IndexedTableHandler.pm.in
	(pod): pod errors
        * bedrock.spec.in
	+ Bedrock::Object
        * src/main/perl/lib/Bedrock/Template.pm.in
	(new): text should be stored as ref
        * src/main/perl/lib/Bedrock/Text/TagX.pm.in
	- isa => reftype()
        * src/main/perl/lib/Bedrock/Text/TagX/Func.pm.in
	(eval): don't call ->can() unless blessed object
        * src/main/perl/lib/Bedrock/Text/TagX/TAG/NoBody/NULL.pm.in
	(finalize): return Bedrock objects always
        * src/main/perl/lib/Makefile.am
	+ Bedrock/Object.pm.in

2017-03-12 Rob Lauer <rlauer6@comcast.net>
	[CodeBuild]:
	* build
	- better help
	- remove NO_SiGN test
	- help on unrecognized command

2017-03-10 Rob Lauer <rlauer6@comcast.net>
	[CodeBuild]:
	* rpm-sign: new
	* buildspec.yml: new
	* RPM-GPG-KEY-oepnbedrock.org: new
	* build
	- consolidate createrepo/deploy

2017-03-09 Rob Lauer <rlauer6@comcast.net>
	[Docker build experiment]:
	* src/main/perl/bin/bedrock-cache.pl.in
	- require IPC::Shareable
	* configure.ac
	- make all Perl modules OPTIONAL
	- make 'prove' OPTIONAL
	- RPM_BUILD_MODE
	* autotools/am_build_mode.am: new
	* build
	- add options -x, -r
	- remove 'recursive' option from sync (old version of aws)

2017-03-07 Rob Lauer <rlauer6@comcast.net>