@@ -88,13 +88,14 @@ sub email_message {
   }
 
    my $msg = MIME::Lite->new(
-			    From     => $options{from},
-			    Cc       => $options{cc},
-			    To       => $to,
-			    Subject  => $options{subject},
-			    Type     => $mime_type,
-			    Data     => $self->parse($message, %{$options{parms}})
-			   );
+                             From     => $options{from},
+                             Cc       => $options{cc},
+                             $options{bcc} ? (Bcc => $options{bcc}) : (),
+                             To       => $to,
+                             Subject  => $options{subject},
+                             Type     => $mime_type,
+                             Data     => $self->parse($message, %{$options{parms}})
+                            );
   
   $msg->send( 'smtp', $smtp_host);
 }
