@@ -11,6 +11,8 @@ bedrock 3.0.2
 
     Fixes:
 
+    - Bedrock::Template::Email::email_message - allow bcc option
+
     - BLM::IndexedTableHandler - validate id is integer
     
     - <include> - do not allow filenames with '..'
