@@ -1,3 +1,10 @@
+2018-11-01 Rob Lauer <rlauer6@comcast.net>
+	* bedrock-build: bump
+
+	[add bcc to email]:
+	* src/main/perl/lib/Bedrock/Template/Email.pm.in
+	(email_message): Bcc
+
 2018-10-23 Rob Lauer <rlauer6@comcast.net>
 	* bedrock-build: bump
 
